@@ -51,21 +51,18 @@ module glimmer_ncparams
   type(glimmer_nc_meta),save :: default_metadata
 
 contains
-  subroutine ReadNCParams(model)
+  subroutine ReadNCParams(model,config)
     !*FD read netCDF I/O related configuration file
     use glide_types
     use glimmer_config
     implicit none
-    type(glide_global_type) :: model
+    type(glide_global_type)      :: model  !*FD model instance
+    type(ConfigSection), pointer :: config !*FD structure holding sections of configuration file
     
     ! local variables
-    type(ConfigSection), pointer :: config
     type(ConfigSection), pointer :: section
     type(glimmer_nc_output), pointer :: output => null()
     type(glimmer_nc_input), pointer :: input => null()
-
-    ! read configuration
-    call ConfigRead(model%funits%ncfile,config)
 
     ! get default meta data
     call GetSection(config,section,'default')
